[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[metadata]
name = sbgecom
version = attr: sbgecom.__version__
description = GNSS packages
long_description = file: README.md, LICENSE.txt
author = Brice Saussay
author_email = brice.saussay@outlook.fr
url = http://github.com/bsaussay/gnss.git
license_files = LICENSE.txt
platforms = unix, linux, osx, cygwin, win32
keywords = sbg, ecom
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
package_dir = 
	=src
packages = find:
install_requires = 
	b64encode,
	HTTPConnection,
	HTTPSConnection

[options.packages.find]
where = src
