[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
name = gnss
version = attr: gnss.__version__
description = GNSS packages
long_description = file: README.md, LICENSE.txt
author = Brice Saussay
author_email = brice.saussay@outlook.fr
url = http://github.com/bsaussay/gnss.git
license_files = LICENSE.txt
platforms = unix, linux, osx, cygwin, win32
keywords = sbg, ecom
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
package_dir = 
	=src
packages = find:
install_requires = 
	requests>=2.7.0
	pandas>=1.3.5
	bitstring>=3.1.9

[options.packages.find]
where = src
